# vxgi

./: .gitignore  CMakeLists.txt  LICENCE.txt  Makefile  README.md
data/: cornell.mtl  monkey.mtl  sponza.mtl
lib/GL/: CMakeLists.txt
lib/GLFW/: LICENCE.txt
lib/imgui/: CMakeLists.txt
lib/lodepng/: CMakeLists.txt
lib/stb/: CMakeLists.txt  stb_ds.cpp
lib/tinyobjloader/: CMakeLists.txt
lib/tinyobjloader-master/: tiny_obj_loader.h
src/: app.cpp  app.h  assets.cpp  assets.h  camera.cpp  camera.h  containers.cpp  containers.h  containers.hpp  geometry.h  lights.cpp  lights.h  main.cpp  opengl.cpp  opengl.h  opengl_renderer.cpp  opengl_renderer.h  opengl_stuff.cpp  opengl_stuff.h  renderer.cpp  renderer.h  scene.cpp  scene.h  typedefs.h  types.h  ui.cpp  voxel_cone_tracing.cpp  voxel_cone_tracing.h
src/shaders/: gbuffer_frag.glsl  gbuffer_vert.glsl  model_frag.glsl  model_vert.glsl  shadowmap_frag.glsl  shadowmap_vert.glsl  shadowmap_visualizer_frag.glsl  shadowmap_visualizer_vert.glsl  voxelconetracing_frag.glsl  voxelconetracing_vert.glsl  voxelization_frag.glsl  voxelization_geom.glsl  voxelization_vert.glsl  voxelization_visualizer_frag.glsl  voxelization_visualizer_vert.glsl  world_pos_frag.glsl  world_pos_vert.glsl
